Switched to using ContentVersion object to store and retrieve data
